Updating leyden and jdk 25 talks